force-app/main/default/objects/SSPTaxFilingConfigurations__c/SSPTaxFilingConfigurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to maintain Tax filing open enrollment configurations</description>
    <label>SSP Tax Filing Configurations</label>
</CustomObject>