force-app/main/default/objects/SSPTaxFilingConfigurations__c/fields/CurrentYear__c.field-meta.xml
<CustomField>
    <fullName>CurrentYear__c</fullName>
    <description>This field is used to store the Current Year for Open Enrollment for Tax Filing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>