force-app/main/default/objects/SSPTaxFilingConfigurations__c/fields/Enrollment_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_EndDate__c</fullName>
    <description>This field is used to store Open Enrollment End Date for Tax Filing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Enrollment End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>