force-app/main/default/objects/SSPTaxFilingConfigurations__c/fields/Enrollment_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_StartDate__c</fullName>
    <description>This field is used to store Open Enrollment Start Date for Tax filing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Enrollment Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>