force-app/main/default/objects/SSPTaxFilingConfigurations__c/fields/OpenEnrollmentYear__c.field-meta.xml
<CustomField>
    <fullName>OpenEnrollmentYear__c</fullName>
    <description>This field is used to store the Enrollment dates for Open Enrollment for Tax Filing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Enrollment Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>