force-app/main/default/objects/SSPTaxFilingConfigurations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OpenEnrollmentYear__c</columns>
    <columns>Enrollment_StartDate__c</columns>
    <columns>Enrollment_EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>